--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <button id="record" onclick="record()">Record</button>
-    <button id="play" onclick="play()">Play</button>
+    <button id="play" onclick="stopRec()">Stop</button>
     <div id="ok"></div>
  
     <script src="index.js"></script>
